@@ -1,5 +1,6 @@
 
 5.1.0 -> 5.2a0:
+    - at: gzdio: push gzFile into a private container.
     - jbj: rpmio: mark "server awol" disconnected state for graceful error
 	handling.
     - jbj: rpmrepo: avoid double'd error message.
